--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @article.title %></h1>
+<%= link_to 'edit', edit_article_path(@article) %>
+<%= link_to 'delete', article_path(@article), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
 <hr>
 <%= @article.content %>
