--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,6 @@
 <% @articles.each do |article| %>
   <ul>
     <%= link_to article.title, article_path(article) %>
+    <p><%= article.content %></p>
   </ul>
 <% end %>
