--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+  <div>
+    <%= link_to 'Wikinimous', root_path%>
+    <%= link_to 'New Article', new_article_path %>
+  </div>
+  <% flash.each do |type, msg| %>
+    <div>
+      <%= msg %>
+    </div>
+  <% end %>
     <%= yield %>
   </body>
 </html>
