--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+.title {
+  font-size: 30px;
+  color: rgb(71, 124, 126);
+  font-family: 'Roboto Slab', serif;;
+}
+.title:hover {
+  color: rgb(36, 79, 81);
+  text-decoration: underline;
+}
+
+i {
+  font-size: 20px;
+  color: rgb(71, 124, 126);
+  padding: 5px;
+  padding-top: 13px;
+}
+
+i:hover {
+  color: rgb(36, 79, 81);
+}
