--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,13 @@
-<h1><%= @article.title %></h1>
-<%= link_to 'edit', edit_article_path(@article) %>
-<%= link_to 'delete', article_path(@article), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
-<hr>
-<%= @article.content %>
+<div class='w-75 container mt-5'>
+  <div class="d-flex">
+    <h1><%= @article.title %></h1>
+    <%= link_to edit_article_path(@article), class: '' do %>
+      <i class="fa-solid fa-pencil"></i>
+    <% end %>
+    <%= link_to article_path(@article), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: '' do %>
+      <i class="fa-solid fa-trash-can"></i>
+    <% end %>
+  </div>
+  <hr>
+  <%= @article.content %>
+</div>
