--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,18 @@
     <%= javascript_importmap_tags %>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Montserrat:wght@100;400&family=Playfair+Display:wght@600&family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
 
   <body>
-  <div>
-    <%= link_to 'Wikinimous', root_path%>
-    <%= link_to 'New Article', new_article_path %>
+  <div class="border-bottom d-flex justify-content-between bg-light p-3">
+    <%= link_to 'Wikinimous', root_path, class: "text-decoration-none text-muted"%>
+    <%= link_to 'New Article', new_article_path, class: 'text-decoration-none text-muted' %>
   </div>
   <% flash.each do |type, msg| %>
-    <div>
+    <div class="alert alert-success w-75 container mt-3">
       <%= msg %>
     </div>
   <% end %>
